# chess

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  setup-git-hooks.sh  version.sh
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.c
bench/: CMakeLists.txt  my_cases.epd  strategic_test_suite.epd
bench/src/: CMakeLists.txt  epd.c  find_magics.c  magic.c  magics.c  moves.c  search.c
doc/: Notes.md  comparison.ods  hashing+killer.csv  hashing.csv  killer.csv  notes.txt  perft.out  speedup.md  v0-6-0.csv
git/: post-commit  pre-commit
src/: CMakeLists.txt  board.h  build.c  build.h  chess.h  clock.h  cmdline.c  cmdline.h  commands.c  commands.h  compiler.h  compiler.h.in  debug.c  debug.h  defs.h  engine.h  epd.c  epd.h  eval.c  eval.h  evaluate.c  evaluate.h  features.c  fen.c  fen.h  game.c  genmoves.h  hash.c  hash.h  history.c  history.h  info.c  info.h  io.c  io.h  language.h  log.c  log.h  lowlevel.h  movegen.c  (+21 more)
src/buildinfo/: CMakeLists.txt  buildinfo.c.in  buildinfo.cmake  buildinfo.h  gitinfo.cmake
src/info/: info.h
test/: CMakeLists.txt  test.c  test.h
test/engine/: test_engine.sh
test/fen/: test_fen.sh
test/perft/: CMakeLists.txt  compare.awk  position2  position4  run_test.cmake  starting  test_perft.sh
test/perft/correct/: position2  position3  starting
test/perft/position2/: position2  stockfish2  stockfish3  stockfish4
test/perft/position3/: position3
test/perft/position4/: position4
test/perft/starting/: starting  stockfish4
test/play/: resigned.fen
test/positions/: chess-v0.7.0-time-control-improvements-e21ef8e-chess-v0.7.0-time-control-improvements-e21ef8e.pgn  e21ef8e-3fold.fen  e21ef8e-3fold.pgn
test/src/: CMakeLists.txt  hash.c  history.c  see.c  size.c
